--- a/DoorFile/DoorCommon.plist
+++ b/DoorFile/DoorCommon.plist
@@ -3,5 +3,13 @@
 <plist version="1.0">
 <array>
 	<string>lymcommon/DIY.zip</string>
+	<string>bfl/ProductAlbumBFLLY.zip</string>
+	<string>bfl/ProductInfo.zip</string>
+	<string>bfl/AboutUs.zip</string>
+	<string>bfl/ProductProjects.zip</string>
+	<string>bfl/ProductAlbum2016.zip</string>
+	<string>cxha/Certs.zip</string>
+	<string>cxha/Video0.mp4</string>
+	<string>cxha/Video0.png</string>
 </array>
 </plist>
