--- a/DoorFile/DoorCommon.plist
+++ b/DoorFile/DoorCommon.plist
@@ -2,14 +2,77 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <array>
-	<string>lymcommon/DIY.zip</string>
-	<string>bfl/ProductAlbumBFLLY.zip</string>
-	<string>bfl/ProductInfo.zip</string>
-	<string>bfl/AboutUs.zip</string>
-	<string>bfl/ProductProjects.zip</string>
-	<string>bfl/ProductAlbum2016.zip</string>
-	<string>cxha/Certs.zip</string>
-	<string>cxha/Video0.mp4</string>
-	<string>cxha/Video0.png</string>
+	<dict>
+		<key>URL</key>
+		<string>lymcommon/DIY.zip</string>
+		<key>Version</key>
+		<string>1</string>
+		<key>Description</key>
+		<string>DIY素材</string>
+	</dict>
+	<dict>
+		<key>URL</key>
+		<string>bfl/ProductAlbumBFLLY.zip</string>
+		<key>Version</key>
+		<string>1</string>
+		<key>Description</key>
+		<string>铝艺相册</string>
+	</dict>
+	<dict>
+		<key>URL</key>
+		<string>bfl/ProductInfo.zip</string>
+		<key>Version</key>
+		<string>1</string>
+		<key>Description</key>
+		<string>产品素材</string>
+	</dict>
+	<dict>
+		<key>URL</key>
+		<string>bfl/AboutUs.zip</string>
+		<key>Version</key>
+		<string>1</string>
+		<key>Description</key>
+		<string>企业素材</string>
+	</dict>
+	<dict>
+		<key>URL</key>
+		<string>bfl/ProductProjects.zip</string>
+		<key>Version</key>
+		<string>1</string>
+		<key>Description</key>
+		<string>工程案例</string>
+	</dict>
+	<dict>
+		<key>URL</key>
+		<string>cxha/Certs.zip</string>
+		<key>Version</key>
+		<string>1</string>
+		<key>Description</key>
+		<string>证书</string>
+	</dict>
+	<dict>
+		<key>URL</key>
+		<string>cxha/Video0.mp4</string>
+		<key>Version</key>
+		<string>1</string>
+		<key>Description</key>
+		<string>宣传视频</string>
+	</dict>
+	<dict>
+		<key>URL</key>
+		<string>cxha/Video0.png</string>
+		<key>Version</key>
+		<string>1</string>
+		<key>Description</key>
+		<string>视频图片</string>
+	</dict>
+	<dict>
+		<key>URL</key>
+		<string>bfl/ProductAlbum2016.zip</string>
+		<key>Version</key>
+		<string>1</string>
+		<key>Description</key>
+		<string>产品相册</string>
+	</dict>
 </array>
 </plist>
