--- a/DoorFile/DoorCommon.plist
+++ b/DoorFile/DoorCommon.plist
@@ -68,7 +68,7 @@
 	</dict>
 	<dict>
 		<key>URL</key>
-		<string>lymcommon/ProductInfo.zip</string>
+		<string>ytje/ProductInfo.zip</string>
 		<key>Version</key>
 		<string>1</string>
 		<key>Description</key>
